CREATE TABLE "users" (
  "user_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" varchar(255) UNIQUE NOT NULL,
  "password_hash" varchar(255) NOT NULL,
  "role" varchar(20) NOT NULL,
  "is_active" boolean NOT NULL DEFAULT true,
  "is_blocked" boolean NOT NULL DEFAULT false,
  "email_confirmed_at" timestamp,
  "created_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "email_tokens" (
  "token_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "token_hash" varchar(255) UNIQUE NOT NULL,
  "purpose" varchar(20) NOT NULL,
  "expires_at" timestamp NOT NULL,
  "used_at" timestamp,
  "created_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "specialists" (
  "specialist_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int UNIQUE NOT NULL,
  "name" varchar(100) NOT NULL,
  "specialization" varchar(50) NOT NULL,
  "city" varchar(100),
  "bio" text,
  "min_price" numeric(10,2),
  "max_price" numeric(10,2),
  "avatar_url" varchar(500),
  "avg_rating" numeric(3,2) DEFAULT 0,
  "portfolio_count" int NOT NULL DEFAULT 0,
  "is_moderated" boolean NOT NULL DEFAULT false,
  "created_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "portfolio_items" (
  "item_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "specialist_id" int NOT NULL,
  "title" varchar(200) NOT NULL,
  "description" text,
  "moderation_status" varchar(20) NOT NULL DEFAULT 'pending',
  "created_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "portfolio_media" (
  "media_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "item_id" int NOT NULL,
  "storage_url" varchar(500) NOT NULL,
  "mime_type" varchar(100) NOT NULL,
  "size_bytes" bigint NOT NULL,
  "order_index" int NOT NULL DEFAULT 0,
  "created_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "tags" (
  "tag_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(50) NOT NULL,
  "category" varchar(20) NOT NULL,
  "slug" varchar(60) UNIQUE NOT NULL
);

CREATE TABLE "specialist_tags" (
  "specialist_id" int NOT NULL,
  "tag_id" int NOT NULL,
  PRIMARY KEY ("specialist_id", "tag_id")
);

CREATE TABLE "portfolio_item_tags" (
  "item_id" int NOT NULL,
  "tag_id" int NOT NULL,
  PRIMARY KEY ("item_id", "tag_id")
);

CREATE TABLE "projects" (
  "project_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "client_id" int NOT NULL,
  "title" varchar(200) NOT NULL,
  "description" text NOT NULL,
  "status" varchar(20) NOT NULL DEFAULT 'draft',
  "min_budget" numeric(12,2),
  "max_budget" numeric(12,2),
  "deadline_days" int,
  "max_responses" int NOT NULL DEFAULT 20,
  "responses_count" int NOT NULL DEFAULT 0,
  "moderation_status" varchar(20) NOT NULL DEFAULT 'pending',
  "created_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  "published_at" timestamp
);

CREATE TABLE "project_deliverables" (
  "deliverable_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "project_id" int NOT NULL,
  "text" text NOT NULL,
  "order_index" int NOT NULL DEFAULT 0
);

CREATE TABLE "project_tags" (
  "project_id" int NOT NULL,
  "tag_id" int NOT NULL,
  PRIMARY KEY ("project_id", "tag_id")
);

CREATE TABLE "responses" (
  "response_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "project_id" int NOT NULL,
  "specialist_id" int NOT NULL,
  "cover_letter" text NOT NULL,
  "proposed_price" numeric(12,2),
  "proposed_deadline_days" int,
  "status" varchar(20) NOT NULL DEFAULT 'pending',
  "created_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "response_portfolio_items" (
  "response_id" int NOT NULL,
  "item_id" int NOT NULL,
  PRIMARY KEY ("response_id", "item_id")
);

CREATE TABLE "invitations" (
  "invitation_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "project_id" int NOT NULL,
  "client_id" int NOT NULL,
  "specialist_id" int NOT NULL,
  "message" text,
  "status" varchar(20) NOT NULL DEFAULT 'pending',
  "rejection_reason" varchar(255),
  "created_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "reviews" (
  "review_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "project_id" int NOT NULL,
  "reviewer_id" int NOT NULL,
  "target_id" int NOT NULL,
  "rating" int NOT NULL,
  "text" text,
  "created_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "support_tickets" (
  "ticket_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "topic" varchar(200) NOT NULL,
  "status" varchar(20) NOT NULL DEFAULT 'open',
  "created_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "support_messages" (
  "message_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "ticket_id" int NOT NULL,
  "author_id" int NOT NULL,
  "text" text NOT NULL,
  "created_at" timestamp NOT NULL DEFAULT (CURRENT_TIMESTAMP)
);

CREATE INDEX ON "users" ("role");

CREATE INDEX "idx_users_flags" ON "users" ("is_active", "is_blocked");

CREATE INDEX ON "email_tokens" ("user_id", "purpose");

CREATE INDEX ON "email_tokens" ("expires_at");

CREATE INDEX "idx_specialists_catalog" ON "specialists" ("is_moderated", "avg_rating");

CREATE INDEX "idx_specialists_filter" ON "specialists" ("city", "specialization");

CREATE INDEX ON "specialists" ("specialization");

CREATE INDEX "idx_portfolio_specialist_status" ON "portfolio_items" ("specialist_id", "moderation_status");

CREATE INDEX ON "portfolio_media" ("item_id", "order_index");

CREATE UNIQUE INDEX ON "tags" ("category", "name");

CREATE INDEX ON "specialist_tags" ("tag_id");

CREATE INDEX ON "portfolio_item_tags" ("tag_id");

CREATE INDEX "idx_projects_feed" ON "projects" ("status", "published_at");

CREATE INDEX ON "projects" ("client_id");

CREATE INDEX ON "projects" ("min_budget", "max_budget");

CREATE INDEX ON "project_deliverables" ("project_id", "order_index");

CREATE INDEX ON "project_tags" ("tag_id");

CREATE UNIQUE INDEX "uq_response_per_pair" ON "responses" ("project_id", "specialist_id");

CREATE INDEX ON "responses" ("project_id", "status");

CREATE INDEX ON "responses" ("specialist_id", "status");

CREATE INDEX ON "response_portfolio_items" ("item_id");

CREATE UNIQUE INDEX "uq_invitation_per_pair" ON "invitations" ("project_id", "specialist_id");

CREATE INDEX ON "invitations" ("specialist_id", "status");

CREATE INDEX ON "invitations" ("client_id", "status");

CREATE UNIQUE INDEX "uq_review_per_author" ON "reviews" ("project_id", "reviewer_id");

CREATE INDEX ON "reviews" ("target_id", "created_at");

CREATE INDEX ON "reviews" ("reviewer_id");

CREATE INDEX ON "support_tickets" ("user_id", "status");

CREATE INDEX ON "support_tickets" ("status", "updated_at");

CREATE INDEX ON "support_messages" ("ticket_id", "created_at");

COMMENT ON COLUMN "users"."role" IS '''specialist'' | ''client'' | ''moderator''';

COMMENT ON COLUMN "email_tokens"."purpose" IS '''email_confirm'' | ''password_reset''';

COMMENT ON COLUMN "specialists"."specialization" IS '''photographer'',''videographer'',''graphic_designer'',''ui_ux_designer'',''motion_designer'',''illustrator'',''copywriter'',''screenwriter'',''musician'',''other''';

COMMENT ON COLUMN "portfolio_items"."moderation_status" IS '''pending'' | ''approved'' | ''rejected''';

COMMENT ON COLUMN "tags"."category" IS '''style'',''genre'',''technique'',''mood'',''format'',''color''';

COMMENT ON COLUMN "projects"."status" IS '''draft'',''open'',''in_progress'',''closed'',''cancelled''';

COMMENT ON COLUMN "responses"."status" IS '''pending'',''accepted'',''rejected''';

COMMENT ON COLUMN "invitations"."status" IS '''pending'',''accepted'',''rejected''';

COMMENT ON COLUMN "reviews"."rating" IS 'CHECK 1..5';

COMMENT ON COLUMN "support_tickets"."status" IS '''open'',''pending'',''closed''';

ALTER TABLE "email_tokens" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "specialists" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "portfolio_items" ADD FOREIGN KEY ("specialist_id") REFERENCES "specialists" ("specialist_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "portfolio_media" ADD FOREIGN KEY ("item_id") REFERENCES "portfolio_items" ("item_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "specialist_tags" ADD FOREIGN KEY ("specialist_id") REFERENCES "specialists" ("specialist_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "specialist_tags" ADD FOREIGN KEY ("tag_id") REFERENCES "tags" ("tag_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "portfolio_item_tags" ADD FOREIGN KEY ("item_id") REFERENCES "portfolio_items" ("item_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "portfolio_item_tags" ADD FOREIGN KEY ("tag_id") REFERENCES "tags" ("tag_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "projects" ADD FOREIGN KEY ("client_id") REFERENCES "users" ("user_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "project_deliverables" ADD FOREIGN KEY ("project_id") REFERENCES "projects" ("project_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "project_tags" ADD FOREIGN KEY ("project_id") REFERENCES "projects" ("project_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "project_tags" ADD FOREIGN KEY ("tag_id") REFERENCES "tags" ("tag_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "responses" ADD FOREIGN KEY ("project_id") REFERENCES "projects" ("project_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "responses" ADD FOREIGN KEY ("specialist_id") REFERENCES "specialists" ("specialist_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "response_portfolio_items" ADD FOREIGN KEY ("response_id") REFERENCES "responses" ("response_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "response_portfolio_items" ADD FOREIGN KEY ("item_id") REFERENCES "portfolio_items" ("item_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "invitations" ADD FOREIGN KEY ("project_id") REFERENCES "projects" ("project_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "invitations" ADD FOREIGN KEY ("client_id") REFERENCES "users" ("user_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "invitations" ADD FOREIGN KEY ("specialist_id") REFERENCES "specialists" ("specialist_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reviews" ADD FOREIGN KEY ("project_id") REFERENCES "projects" ("project_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reviews" ADD FOREIGN KEY ("reviewer_id") REFERENCES "users" ("user_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reviews" ADD FOREIGN KEY ("target_id") REFERENCES "users" ("user_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "support_tickets" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "support_messages" ADD FOREIGN KEY ("ticket_id") REFERENCES "support_tickets" ("ticket_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "support_messages" ADD FOREIGN KEY ("author_id") REFERENCES "users" ("user_id") DEFERRABLE INITIALLY IMMEDIATE;
