// ==============================================================
// ArtHunt — физическая модель (PostgreSQL 15)
// dbdiagram.io / DBML
// ==============================================================

Project arthunt {
  database_type: 'PostgreSQL'
  Note: 'ArtHunt — маркетплейс творческих специалистов. Схема arthunt.'
}

// ---------- Пользователи ----------

Table users {
  user_id       int          [pk, increment]
  email         varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  role          varchar(20)  [not null, note: "'specialist' | 'client' | 'moderator'"]
  is_active     boolean      [not null, default: true]
  is_blocked    boolean      [not null, default: false]
  email_confirmed_at timestamp
  created_at    timestamp    [not null, default: `CURRENT_TIMESTAMP`]
  updated_at    timestamp    [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    role
    (is_active, is_blocked) [name: 'idx_users_flags']
  }
}

Table email_tokens {
  token_id     bigint       [pk, increment]
  user_id      int          [not null, ref: > users.user_id]
  token_hash   varchar(255) [not null, unique]
  purpose      varchar(20)  [not null, note: "'email_confirm' | 'password_reset'"]
  expires_at   timestamp    [not null]
  used_at      timestamp
  created_at   timestamp    [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id, purpose)
    expires_at
  }
}

// ---------- Специалисты и портфолио ----------

Table specialists {
  specialist_id    int           [pk, increment]
  user_id          int           [not null, unique, ref: - users.user_id]
  name             varchar(100)  [not null]
  specialization   varchar(50)   [not null, note: "'photographer','videographer','graphic_designer','ui_ux_designer','motion_designer','illustrator','copywriter','screenwriter','musician','other'"]
  city             varchar(100)
  bio              text
  min_price        numeric(10,2)
  max_price        numeric(10,2)
  avatar_url       varchar(500)
  avg_rating       numeric(3,2)  [default: 0]
  portfolio_count  int           [not null, default: 0]
  is_moderated     boolean       [not null, default: false]
  created_at       timestamp     [not null, default: `CURRENT_TIMESTAMP`]
  updated_at       timestamp     [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (is_moderated, avg_rating) [name: 'idx_specialists_catalog']
    (city, specialization)     [name: 'idx_specialists_filter']
    specialization
  }
}

Table portfolio_items {
  item_id            int         [pk, increment]
  specialist_id      int         [not null, ref: > specialists.specialist_id]
  title              varchar(200) [not null]
  description        text
  moderation_status  varchar(20) [not null, default: 'pending', note: "'pending' | 'approved' | 'rejected'"]
  created_at         timestamp   [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (specialist_id, moderation_status) [name: 'idx_portfolio_specialist_status']
  }
}

Table portfolio_media {
  media_id         bigint       [pk, increment]
  item_id          int          [not null, ref: > portfolio_items.item_id]
  storage_url      varchar(500) [not null]
  mime_type        varchar(100) [not null]
  size_bytes       bigint       [not null]
  order_index      int          [not null, default: 0]
  created_at       timestamp    [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (item_id, order_index)
  }
}

// ---------- Справочник тегов ----------

Table tags {
  tag_id    int          [pk, increment]
  name      varchar(50)  [not null]
  category  varchar(20)  [not null, note: "'style','genre','technique','mood','format','color'"]
  slug      varchar(60)  [not null, unique]

  Indexes {
    (category, name) [unique]
  }
}

Table specialist_tags {
  specialist_id int [not null, ref: > specialists.specialist_id]
  tag_id        int [not null, ref: > tags.tag_id]

  Indexes {
    (specialist_id, tag_id) [pk]
    tag_id
  }
}

Table portfolio_item_tags {
  item_id int [not null, ref: > portfolio_items.item_id]
  tag_id  int [not null, ref: > tags.tag_id]

  Indexes {
    (item_id, tag_id) [pk]
    tag_id
  }
}

// ---------- Проекты ----------

Table projects {
  project_id        int          [pk, increment]
  client_id         int          [not null, ref: > users.user_id]
  title             varchar(200) [not null]
  description       text         [not null]
  status            varchar(20)  [not null, default: 'draft', note: "'draft','open','in_progress','closed','cancelled'"]
  min_budget        numeric(12,2)
  max_budget        numeric(12,2)
  deadline_days     int
  max_responses     int          [not null, default: 20]
  responses_count   int          [not null, default: 0]
  moderation_status varchar(20)  [not null, default: 'pending']
  created_at        timestamp    [not null, default: `CURRENT_TIMESTAMP`]
  published_at      timestamp

  Indexes {
    (status, published_at) [name: 'idx_projects_feed']
    client_id
    (min_budget, max_budget)
  }
}

Table project_deliverables {
  deliverable_id int  [pk, increment]
  project_id     int  [not null, ref: > projects.project_id]
  text           text [not null]
  order_index    int  [not null, default: 0]

  Indexes {
    (project_id, order_index)
  }
}

Table project_tags {
  project_id int [not null, ref: > projects.project_id]
  tag_id     int [not null, ref: > tags.tag_id]

  Indexes {
    (project_id, tag_id) [pk]
    tag_id
  }
}

// ---------- Отклики и приглашения ----------

Table responses {
  response_id             int           [pk, increment]
  project_id              int           [not null, ref: > projects.project_id]
  specialist_id           int           [not null, ref: > specialists.specialist_id]
  cover_letter            text          [not null]
  proposed_price          numeric(12,2)
  proposed_deadline_days  int
  status                  varchar(20)   [not null, default: 'pending', note: "'pending','accepted','rejected'"]
  created_at              timestamp     [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (project_id, specialist_id) [unique, name: 'uq_response_per_pair']
    (project_id, status)
    (specialist_id, status)
  }
}

Table response_portfolio_items {
  response_id int [not null, ref: > responses.response_id]
  item_id     int [not null, ref: > portfolio_items.item_id]

  Indexes {
    (response_id, item_id) [pk]
    item_id
  }
}

Table invitations {
  invitation_id     int         [pk, increment]
  project_id        int         [not null, ref: > projects.project_id]
  client_id         int         [not null, ref: > users.user_id]
  specialist_id     int         [not null, ref: > specialists.specialist_id]
  message           text
  status            varchar(20) [not null, default: 'pending', note: "'pending','accepted','rejected'"]
  rejection_reason  varchar(255)
  created_at        timestamp   [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (project_id, specialist_id) [unique, name: 'uq_invitation_per_pair']
    (specialist_id, status)
    (client_id, status)
  }
}

// ---------- Отзывы ----------

Table reviews {
  review_id    int         [pk, increment]
  project_id   int         [not null, ref: > projects.project_id]
  reviewer_id  int         [not null, ref: > users.user_id]
  target_id    int         [not null, ref: > users.user_id]
  rating       int         [not null, note: 'CHECK 1..5']
  text         text
  created_at   timestamp   [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (project_id, reviewer_id) [unique, name: 'uq_review_per_author']
    (target_id, created_at)
    reviewer_id
  }
}

// ---------- Поддержка ----------

Table support_tickets {
  ticket_id  int         [pk, increment]
  user_id    int         [not null, ref: > users.user_id]
  topic      varchar(200) [not null]
  status     varchar(20)  [not null, default: 'open', note: "'open','pending','closed'"]
  created_at timestamp    [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp    [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id, status)
    (status, updated_at)
  }
}

Table support_messages {
  message_id bigint    [pk, increment]
  ticket_id  int       [not null, ref: > support_tickets.ticket_id]
  author_id  int       [not null, ref: > users.user_id]
  text       text      [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (ticket_id, created_at)
  }
}
